[package]
name = "plotinator-lib"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = ["selfupdater"]
hdf = ["dep:skytem_hdf"]
selfupdater = ["dep:axoupdater"]

[dependencies]
skytem_hdf = { workspace = true, optional = true }
skytem_logs.workspace = true
log_if.workspace = true
plot_util.workspace = true
egui_plot.workspace = true
log.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
chrono.workspace = true
getset.workspace = true
semver.workspace = true
egui.workspace = true
eframe.workspace = true
rfd.workspace = true
egui-phosphor.workspace = true
egui-notify.workspace = true
tokio.workspace = true

[dev-dependencies]
testresult.workspace = true
tempfile.workspace = true
reqwest.workspace = true


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
zip = "2.2.2"
axoupdater = { version = "0.9.0", features = ["blocking"], optional = true }


# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

# windows
[target.'cfg(target_os = "windows")'.dependencies]
elevated-command.workspace = true

[lints]
workspace = true
