[package]
name = "plotinator-log-if"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
plotinator-ui-util.workspace = true
walkers.workspace = true
egui.workspace = true
serde.workspace = true
chrono.workspace = true
log.workspace = true
anyhow.workspace = true

[dev-dependencies]
testresult.workspace = true
test-log.workspace = true
