[package]
name = "plotinator-logs"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
plotinator-log-if.workspace = true
plotinator-ui-util.workspace = true
serde.workspace = true
serde-big-array.workspace = true
strum.workspace = true
byteorder.workspace = true
chrono.workspace = true
getset.workspace = true
derive_more.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
plotinator-test-util.workspace = true
pretty_assertions.workspace = true
