[package]
name = "plotinator-macros"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
profiling = { workspace = true, optional = true }
puffin = { workspace = true, optional = true }

[features]
default = []
profiling = ["dep:profiling", "dep:puffin"]


[lints]
workspace = true
