[package]
name = "plotinator-macros"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
profiling = { workspace = true, optional = true }
puffin = { workspace = true, optional = true }

[features]
default = []
profiling = ["dep:profiling", "dep:puffin"]


[lints]
workspace = true
