[package]
name = "plotinator-map-ui"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
plotinator-log-if.workspace = true
serde.workspace = true
walkers.workspace = true
egui.workspace = true
egui_extras.workspace = true
log.workspace = true

[lints]
workspace = true
