[package]
name = "plotinator-map-ui"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
plotinator-log-if.workspace = true
plotinator-proc-macros.workspace = true
plotinator-ui-util.workspace = true
plotinator-mqtt-ui.workspace = true
plotinator-mqtt.workspace = true

walkers.workspace = true
egui-phosphor.workspace = true
egui.workspace = true
egui_extras.workspace = true
serde.workspace = true
log.workspace = true
strum.workspace = true
strum_macros.workspace = true
smallvec.workspace = true

[lints]
workspace = true
