[package]
name = "plotinator-map"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
walkers.workspace = true
egui.workspace = true

[lints]
workspace = true
