[package]
name = "plotinator-mqtt-ui"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
plotinator-macros.workspace = true
plotinator-mqtt.workspace = true
plotinator-log-if.workspace = true
plotinator-ui-util.workspace = true
egui.workspace = true
egui_plot.workspace = true
egui-phosphor.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true

[lints]
workspace = true
