[package]
name = "plotinator-mqtt"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
egui.workspace = true
egui_plot.workspace = true
egui-phosphor.workspace = true

chrono. workspace = true
plotinator-log-if. workspace = true
plotinator-ui-util.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
strum_macros.workspace = true
strum.workspace = true
plotinator-macros.workspace = true
anyhow.workspace = true

[dev-dependencies]
plotinator-test-util.workspace = true
testresult.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rumqttc.workspace = true

[lints]
workspace = true
