[package]
name = "plotinator-mqtt"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
plotinator-log-if.workspace = true
plotinator-ui-util.workspace = true
plotinator-macros.workspace = true
egui_plot.workspace = true
rumqttc.workspace = true

chrono.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
anyhow.workspace = true
smallvec.workspace = true

[dev-dependencies]
plotinator-test-util.workspace = true
testresult.workspace = true
insta.workspace = true

[lints]
workspace = true
