[package]
name = "plotinator-plot-ui"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
plotinator-supported-formats.workspace = true
plotinator-macros.workspace = true
plotinator-proc-macros.workspace = true
plotinator-plot-util.workspace = true
plotinator-ui-util.workspace = true
plotinator-strfmt.workspace = true
plotinator-log-if.workspace = true
puffin = { workspace = true, optional = true }
egui.workspace = true
egui_plot.workspace = true
egui-phosphor.workspace = true
egui-notify.workspace = true
chrono.workspace = true
log.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
smallvec.workspace = true
rayon.workspace = true


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
plotinator-mqtt = { workspace = true, optional = true }
plotinator-mqtt-ui = { workspace = true, optional = true }
plotinator-map-ui = { workspace = true, optional = true }

[features]
default = []
map = ["dep:plotinator-map-ui"]
mqtt = ["dep:plotinator-mqtt", "dep:plotinator-mqtt-ui"]
log_time = ["plotinator-proc-macros/log_time"]
profiling = ["plotinator-proc-macros/profiling", "dep:puffin"]


[lints]
workspace = true
