[package]
name = "plotinator-plot-util"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
plotinator-log-if.workspace = true
plotinator-ui-util.workspace = true
plotinator-macros.workspace = true
plotinator-proc-macros.workspace = true
plotinator-map.workspace = true
puffin = { workspace = true, optional = true }
egui_plot.workspace = true
egui.workspace = true
serde.workspace = true
chrono.workspace = true
num-traits.workspace = true
log.workspace = true
strum_macros.workspace = true
strum.workspace = true
rayon.workspace = true

[dev-dependencies]
testresult.workspace = true
pretty_assertions.workspace = true

[features]
default = []
log_time = ["plotinator-proc-macros/log_time"]
profiling = ["plotinator-proc-macros/profiling", "dep:puffin"]
