[package]
name = "plotinator-plot-util"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
plotinator-log-if.workspace = true
plotinator-ui-util.workspace = true
plotinator-macros.workspace = true
plotinator-proc-macros.workspace = true
puffin = { workspace = true, optional = true }
egui_plot.workspace = true
egui.workspace = true
serde.workspace = true
chrono.workspace = true
log.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
insta.workspace = true

[features]
default = []
log_time = ["plotinator-proc-macros/log_time"]
profiling = ["plotinator-proc-macros/profiling", "dep:puffin"]
