[package]
name = "plotinator-proc-macros"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full"] }
puffin = { workspace = true, optional = true }
profiling = { workspace = true, optional = true }

[features]
default = []
profiling = ["dep:profiling", "dep:puffin"]
log_time = []


[lints]
workspace = true
