[package]
name = "plotinator-proc-macros"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true
puffin = { workspace = true, optional = true }
profiling = { workspace = true, optional = true }

[features]
default = []
profiling = ["dep:profiling", "dep:puffin"]
log_time = []


[lints]
workspace = true
