[package]
name = "plotinator-supported-formats"
description = "Entry points for adding new supported formats"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["hdf5"]
hdf5 = []
profiling = ["dep:profiling", "dep:puffin", "dep:puffin_http"]


[dependencies]
plotinator-log-if = { workspace = true }
plotinator-logs = { workspace = true }
plotinator-hdf5 = { workspace = true }
plotinator-mqtt = { workspace = true }
plotinator-macros = { workspace = true }
plotinator-proc-macros = { workspace = true }
serde = { workspace = true }
memmap2 = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }

# -- Profiling dependencies
profiling = { workspace = true, optional = true }
puffin = { workspace = true, optional = true }
puffin_http = { workspace = true, optional = true }
# Profiling dependencies --

[dev-dependencies]
plotinator-test-util = { workspace = true }


[lints]
workspace = true
