[package]
name = "plotinator-supported-formats"
description = "Entry points for adding new supported formats"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["hdf5"]
hdf5 = []
log_time = ["plotinator-proc-macros/log_time"]
profiling = ["plotinator-proc-macros/profiling", "dep:puffin"]


[dependencies]
plotinator-log-if = { workspace = true }
plotinator-logs = { workspace = true }
plotinator-hdf5 = { workspace = true }
plotinator-csv = { workspace = true }
plotinator-mqtt = { workspace = true }
plotinator-mqtt-ui = { workspace = true }
plotinator-macros = { workspace = true }
plotinator-proc-macros = { workspace = true }
plotinator-ui-file-io = { workspace = true }
puffin = { workspace = true, optional = true }
anyhow = { workspace = true }
serde = { workspace = true }
memmap2 = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
plotinator-test-util = { workspace = true }


[lints]
workspace = true
