[package]
name = "plotinator-ui-util"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
egui.workspace = true
egui_plot.workspace = true

[lints]
workspace = true
