[package]
name = "plotinator-ui-util"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
egui.workspace = true
egui_plot.workspace = true
serde.workspace = true
chrono.workspace = true
log.workspace = true
strum.workspace = true

[lints]
workspace = true
