[package]
name = "plotinator-updater"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# The updater is only for native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui.workspace = true
eframe.workspace = true
semver.workspace = true
log.workspace = true
tokio.workspace = true
axoupdater = { version = "0.9.0", features = ["blocking"] }

[dev-dependencies]
reqwest.workspace = true
testresult.workspace = true
tempfile.workspace = true

[lints]
workspace = true
